--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,22 +5,31 @@
 
 </div>
 
+<div class="demo">
+    <div>Start Date: {{ startDate | date: 'MMM/dd/yyyy' }}</div>
+    <div>{{ title | uppercase }}</div>
+    <!-- number-pipe, 3(kolme numeroa ennen desimaalia).3-5(3-5 numeroa desimaalin jälkeen) -->
+    <div> {{ price | number: '3.3-5'}}</div> 
+</div>
 
 <div class="courses">
+    
 
-    <div class="course-card">
+    <!-- Täällä lisätty custom event handler -->
+    <course-card *ngFor="let course of courses;index as i;" 
+                (courseSelected)="onCourseSelected($event)" 
+                [course]="course" 
+                [cardIndex]="i + 1"></course-card>
+    
+                <!-- Alla olevilla luokilla voi määrittää sääntöjä jotka pätee ekalle, viimeiselle, parillisille ja parittomille course-cardeille
+                first as isFirst;last as isLast;
+                even as isEven;odd as isOdd"
+                [class.is-first]="isFirst"
+                [class.is-last]="isLast"
+                [class.is-even]="isEven"
+                [class.is-odd]="isOdd" -->
 
-        <div class="course-title">
-            Angular Core Deep Dive
-        </div>
-        <img width="300" alt="Angular Logo"
-             src="https://s3-us-west-1.amazonaws.com/angular-university/course-images/angular-core-in-depth-small.png">
-
-        <div class="course-description">
-            A detailed walk-through of the most important part of Angular - the Core and Common modules.
-        </div>
-
-    </div>
+    
 
 </div>
 
