change styles to css-file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,10 @@
 </div>
 
 <div class="demo">
-    <div>Start Date: {{ startDate | date: 'MMM/dd/yyyy' }}</div>
-    <div>{{ title | uppercase }}</div>
+    <!-- <div>Start Date: {{ startDate | date: 'MMM/dd/yyyy' }}</div> -->
+    <!-- <div>{{ title | uppercase }}</div> -->
     <!-- number-pipe, 3(kolme numeroa ennen desimaalia).3-5(3-5 numeroa desimaalin jälkeen) -->
-    <div> {{ price | number: '3.3-5'}}</div> 
+    <!-- <div> {{ price | number: '3.3-5'}}</div>  -->
 </div>
 
 <div class="courses">
