--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,5 +1,5 @@
 
-course-card {
+/* course-card {
   display: block;
 }
 
@@ -83,7 +83,7 @@ course-card.is-odd {
 .highlighted {
   box-shadow: 0 2px 16px 0 #de1e19, 0 3px 8px 0 rgba(226, 21, 19, 0.47), 0 6px 8px -1px #b41c18;
 }
-
+ */
 
 
 
